IO bug, and other stuff